results/SpecGenBench/4-shot/log-TwoSum-2023_11_28_02_20_30.txt
class TwoSum {
    //@ requires nums != null;
    //@ requires \forall int i; 0 <= i && i < nums.length; Integer.MIN_VALUE <= nums[i] && nums[i] <= Integer.MAX_VALUE;
    //@ ensures \result != null;
    //@ ensures \result.length <= 2;
    //@ ensures \result.length == 2 ==> nums[\result[0]] + nums[\result[1]] == target;
    //@ ensures \result.length == 0 ==> (\forall int i; 0 <= i && i < nums.length; nums[i] + nums[j] != target);
    public int[] twoSum(int[] nums, int target) {
        int n = nums.length;
        //@ ghost int i_counter;
        //@ set i_counter = 0;
        //@ maintaining -1 <= i && i < n;
        //@ decreases n - i;
        for (int i = 0; i < n; ++i) {
            //@ ghost int j_counter;
            //@ set j_counter = i + 1;
            //@ maintaining i <= j && j < n;
            //@ decreases n - j;
            for (int j = i + 1; j < n; ++j) {
                if (nums[i] + nums[j] == target) {
                    return new int[]{i, j};
                }
                //@ set j_counter = j_counter + 1;
            }
            //@ set i_counter = i_counter + 1;
        }
        return new int[0];
    }
}
/home/max/Documents/JMLGPT/tmp/TwoSum.java:7: error: cannot find symbol
    //@ ensures \result.length == 0 ==> (\forall int i; 0 <= i && i < nums.length; nums[i] + nums[j] != target);
                                                                                                  ^
  symbol:   variable j
  location: class TwoSum
1 error

